--- a/ios/Resources/Info.plist
+++ b/ios/Resources/Info.plist
@@ -11,23 +11,9 @@
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIcons</key>
-	<dict>
-		<key>CFBundlePrimaryIcon</key>
-		<dict>
-			<key>CFBundleIconFiles</key>
-			<array>
-				<string>Icon-57</string>
-				<string>Icon.png</string>
-				<string>Icon@2x.png</string>
-				<string>Icon-60.png</string>
-				<string>Icon-60@2x.png</string>
-				<string>Icon-72.png</string>
-				<string>Icon-72@2x.png</string>
-				<string>Icon-76.png</string>
-				<string>Icon-76@2x.png</string>
-			</array>
-		</dict>
-	</dict>
+	<dict/>
+	<key>CFBundleIcons~ipad</key>
+	<dict/>
 	<key>CFBundleIdentifier</key>
 	<string>com.jessemillar.Zambies</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -39,7 +25,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1.0</string>
+	<string>1.0.1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSMainNibFile</key>
